kubernetes/media/prowlarr/06-svc-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: prowlarr
---
# For Metal LB
# apiVersion: v1
# kind: Service
# metadata:
#   name: prowlarr-lb
#   namespace: media
#   annotations:
#     metallb.universe.tf/allow-shared-ip: prowlarr
# spec:
#   type: LoadBalancer
#   selector:
#     app: prowlarr
#   ports:
#     - name: http
#       port: 80
#       targetPort: http
#       protocol: TCP
